First logic working

--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
     </div>
 
     <script src="./assets/script/design.js" type="text/javascript"></script>
-
+    <script src="./assets/script/script.js" type="text/javascript"></script>
 </body>
 </html>
