--- a/index.html
+++ b/index.html
@@ -2,65 +2,88 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SLIC</title>
+    <title>Slick</title>
 
     <link rel="stylesheet" type=text/css href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
     <link rel="stylesheet" type=text/css href="./assets/style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Allura|Roboto+Mono|Roboto" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="ui container">
-        <h1><span id="slic">Slic</span> primer designer</h1>
-        <form class="ui large form" action="slic.cgi">
+        <h1><span id="slic">Slick</span> primer design</h1>
+        <form class="ui large form">
             <div id="insert" class="field">
                 <label>Insert</label>
-                <input type="text" name="insert">
+                <input type="text" pattern="[AaTtGgCc]+" name="insert">
             </div>
             <div id="vector" class="two fields">
                 <div class="field">
                     <label>Vector 3' End</label>
-                    <input type="text" name="vector3">
+                    <input type="text" pattern="[AaTtGgCc]+" name="vector3">
                 </div>
                 <div class="field">
                     <label>Vector 5' End</label>
-                    <input type="text" name="vector5">
+                    <input type="text" pattern="[AaTtGgCc]+" name="vector5">
                 </div>
             </div>
             <div id="tm" class="three fields">
                 <div class="field">
                     <label>Tm min [°C]</label>
-                    <input type="text">
+                    <input name="tmMin" pattern="[0-9]+" type="text">
                 </div>                  
                 <div class="field">
                     <label>Tm max [°C]</label>
-                    <input type="text">
+                    <input name="tmMax" pattern="[0-9]+" type="text">
                 </div>                
                 <div class="field">
                     <label>Calculation method:</label>
-                    <select name="" id="" class="ui fluid dropdown">
-                        <option value="">Base stacking</option>
+                    <select name="method" class="ui dropdown">
+                        <option value="BS">Base stacking</option>
+                        <option value="RT">Rule of thumb</option>
                     </select>
                 </div>
             </div>
             <div id="options" class="three fields">
                 <div class="field">
                     <label>Min length</label>
-                    <input type="text">
+                    <input name="minLength" pattern="[0-9]+" type="text">
                 </div>
                 <div class="field">
                     <label>Max lenth</label>
-                    <input type="text">
+                    <input name="maxLength" pattern="[0-9]+" type="text">
                 </div>
                 <div class="field">
                     <label>Overhang on:</label>
-                    <select class="ui dropdown">
+                    <select name="overhang" class="ui dropdown">
                         <option value="insert">Insert</option>
                         <option value="vector">Vector</option>
-                        <option value="custom">Custom</option>
+                        <!-- <option value="custom">Custom</option> -->
                     </select>
                 </div>
             </div>
-        <button class="ui violet button">Submit</button>
+        <button class="ui green button">Submit</button>
+        </form>
+
+        <form class="ui form">
+            <div class="field">
+                <textarea id="primersField" name="primers" cols="30" rows="10">
+                </textarea>
+            </div>
+            <div id="primersInfo" class="ui positive message">
+                <div class="ui grid">
+                    <div id="info1" class="eight wide column">
+                        <div id="headerInfo" class="header"></div>
+                        <div id="info"></div>
+                    </div>                    
+                    <div id="info2" class="eight wide column">
+                        <div id="headerInfo" class="header"></div>
+                        <div id="info"></div>
+                    </div>
+                </div>
+            </div>
         </form>
     </div>
 
