--- a/index.html
+++ b/index.html
@@ -2,58 +2,83 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Slick</title>
+    <title>Slic</title>
 
     <link rel="stylesheet" type=text/css href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
-    <link rel="stylesheet" type=text/css href="./assets/style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Allura|Roboto+Mono|Roboto" rel="stylesheet">
+    <link rel="stylesheet" type=text/css href="./assets/style/style.css">
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="ui container">
-        <h1><span id="slic">Slick</span> primer design</h1>
+        <h1><span id="slic">Slic</span> primer design</h1>
         <form class="ui large form">
             <div id="insert" class="field">
                 <label>Insert</label>
-                <input type="text" pattern="[AaTtGgCc]+" name="insert">
+                <input class="dna" type="text" pattern="[AaTtGgCc]+" name="insert">
             </div>
             <div id="vector" class="two fields">
                 <div id="vec3" class="field">
                     <label>Vector 3'</label>
-                    <input type="text" pattern="[AaTtGgCc]+" name="vector3">
+                    <input class="dna" type="text" pattern="[AaTtGgCc]+" name="vector3">
                 </div>
                 <div id="vec5" class="field">
                     <label>Vector 5'</label>
-                    <input type="text" pattern="[AaTtGgCc]+" name="vector5">
+                    <input class="dna" type="text" pattern="[AaTtGgCc]+" name="vector5">
+                </div>
+            </div>
+            <div id="conc" class="three fields">
+                <div class="field">
+                    <label>Primer concentration:</label>
+                    <div class="ui right labeled input">
+                        <input name="concDNA" pattern="[0-9]+" type="text" value="200">
+                        <div class="ui basic label">nM</div>
+                    </div>                    
+                    <div class="ui right labeled input">
+                        
+                    </div>
+                </div>                
+                <div class="field">
+                    <label>Na<sup>+</sup> concentration:</label>
+                    <div class="ui right labeled input">
+                        <input name="concNa" pattern="[0-9]+" type="text" value="50">
+                        <div class="ui basic label">mM</div>
+                    </div>                    
+                </div>
+                <div class="field">
+                    <label>Mg<sup>2+</sup> concentration:</label>
+                    <div class="ui right labeled input">
+                        <input name="concMg" pattern="[0-9]+" type="text" value="0">
+                        <div class="ui basic label">mM</div>
+                    </div>
                 </div>
             </div>
             <div id="tm" class="three fields">
                 <div class="field">
-                    <label>Tm min [°C]</label>
-                    <input name="tmMin" pattern="[0-9]+" type="text">
-                </div>                  
+                    <label>T<sub>m</sub> min:</label>
+                    <div class="ui right labeled input">
+                        <input name="tmMin" pattern="[0-9]+" type="text" value="56">                    
+                        <div class="ui basic label">°C</div>
+                    </div>
+                </div>              
                 <div class="field">
-                    <label>Tm max [°C]</label>
-                    <input name="tmMax" pattern="[0-9]+" type="text">
-                </div>                
-                <div class="field">
-                    <label>Calculation method:</label>
-                    <select name="method" class="ui dropdown">
+                    <label>T<sub>m</sub> calculation method:</label>
+                    <select id="method" name="method" class="ui dropdown">
                         <option value="BS">Base stacking</option>
-                        <option value="RT">Rule of thumb</option>
+                        <option value="RT">Wallace rule</option>
                     </select>
                 </div>
             </div>
-            <div id="options" class="three fields">
+            <div id="options" class="three fields">     
                 <div class="field">
-                    <label>Min length</label>
-                    <input name="minLength" pattern="[0-9]+" type="text">
-                </div>
-                <div class="field">
-                    <label>Max lenth</label>
-                    <input name="maxLength" pattern="[0-9]+" type="text">
+                    <label>Overhang length:</label>
+                    <div class="ui right labeled input">
+                        <input name="overhangLength" pattern="[0-9]+" type="text" value="16">
+                        <div class="ui basic label">bp</div>
+                    </div>
                 </div>
                 <div class="field">
                     <label>Overhang on:</label>
@@ -64,25 +89,44 @@
                     </select>
                 </div>
             </div>
-        <button class="ui green button">Submit</button>
+        <button class="ui green button">Get primers</button>
         </form>
+
+        <div class="ui error message">
+            <div class="header">
+                <i class="warning sign icon"></i>
+                <strong></strong>
+            </div>
+        </div>        
+        <div class="ui warning message">
+            <div class="header">
+                <i class="warning circle icon"></i>
+                <strong></strong>
+            </div>
+        </div>
 
         <form class="ui form">
             <div class="field">
-                <textarea id="primersField" name="primers" cols="30" rows="10">
+                <textarea id="primersField" name="primers" cols="30" rows="12">
                 </textarea>
             </div>
             <div id="primersInfo" class="ui positive message">
                 <div class="ui grid">
                     <div class="four wide column">
+                        <div class="header"></div>
+                        <div class="info"></div>
                     </div>                    
                     <div class="four wide column">
+                        <div class="header"></div>
+                        <div class="info"></div>
                     </div>                    
                     <div class="four wide column">
+                        <div class="header"></div>
+                        <div class="info"></div>
                     </div>                    
                     <div class="four wide column">
-                        <div id="headerInfo" class="header"></div>
-                        <div id="info"></div>
+                        <div class="header"></div>
+                        <div class="info"></div>
                     </div>
                 </div>
             </div>
