--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </select>
                 </div>
             </div>
-        <button class="ui green button">Get Primers <i class="wizard icon"></i></button>
+        <button class="ui green button"><i class="big wizard icon"></i></button>
         </form>
 
         <div class="ui error message">
