--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="SLIC primer design">
+    <meta name="keywords" content="SLIC, LIC, primer design, ligation independent cloning, cloning, melting temperature, tm">
+    <meta name="author" content="Jonas Simon Fleck">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slic</title>
 
     <link rel="stylesheet" type=text/css href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
@@ -157,7 +161,7 @@
                 <p>T<sub>m</sub> = 4(G + C) + 2(A + T)</p>
                 <p>and for 14 or more nucleotides, the Wallace rule<sup class="ref">3</sup> is applied:</p>
                 <p>T<sub>m</sub> = 64.9 + 41(G + C - 16.4) / (A + T + G + C)</p>
-                <p>where G, C , A and T are the occurrences of the respective bases in the sequence. Both equations assume the standard conditions of 50 nM primer, 50 mM Na<sup>+</sup>, and pH 7.0.</p>
+                <p>where G, C, A and T are the occurrences of the respective bases in the sequence. Both equations assume the standard conditions of 50 nM primer, 50 mM Na<sup>+</sup>, and pH 7.0.</p>
 
                 <p><strong>(2) Base stacking:</strong></p>
                 <p>This is a thermodynamical approach to approximate the T<sub>m</sub>, which also takes salt concentrations into account. The underlying script is essentially a JavaScript version of the PHP script used <a class="link" href="http://insilico.ehu.es/tm.php">here</a><sup class="ref">4,5</sup>.</p>
