--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slic</title>
 
+    <link rel="icon" href="assets/img/icon.png">
     <link rel="stylesheet" type=text/css href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
     <link href="https://fonts.googleapis.com/css?family=Allura|Roboto+Mono|Roboto" rel="stylesheet">
     <link rel="stylesheet" type=text/css href="./assets/style/style.css">
