--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="SLIC, LIC, primer design, ligation independent cloning, cloning, melting temperature, tm">
     <meta name="author" content="Jonas Simon Fleck">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slic</title>
+    <title>Slic | Primer Design</title>
 
     <link rel="icon" href="assets/img/icon.png">
     <link rel="stylesheet" type=text/css href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
