new color scheme

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </select>
                 </div>
             </div>
-        <button class="ui green button"><i class="big wizard icon"></i></button>
+        <button class="ui blue button"><i class="big wizard icon"></i></button>
         </form>
 
         <div class="ui error message">
